# uhd_radar

./: .gitignore  CNAME  Makefile  README.md  debug_log.txt  environment-pynq.yaml  environment.yaml  hugo.toml  run.py
.github/workflows/: hugo.yaml
config/: constant_b210.yaml  default.yaml  default_rfsoc42.yaml  default_x310.yaml  glass-reference-default.yaml  opres.yaml  synthetic_config.yaml
data/: README.md
docs/: bin_format.md
postprocessing/: Geostacking.py  auto_amplification.py  auto_amplification_instructions.md  gps_processing.py  permanent_storage.py  processing_dask.py  save_data.py
postprocessing/notebooks/: Field Processing.ipynb  GPS Processing.ipynb  Glass Field Processing.ipynb  Radar 1D Stacking.ipynb
postprocessing/notebooks/peregrine_paper/: Estimate In-Flight SNR.ipynb  Plot Example Radargram.ipynb  Plot SNR Results.ipynb
postprocessing/scripts/: echogram.py
preprocessing/: generate_chirp.py
sdr/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  chirp.cpp  chirp.hpp  cmake_install.cmake  common.hpp  common_rfsoc42.hpp  common_usrp.hpp  hisnr_rfsoc42.cpp  hisnr_rfsoc42.hpp  hisnr_usrp.cpp  hisnr_usrp.hpp  main.cpp  main.hpp  pseudorandom_phase.hpp  sdr.cpp  sdr.hpp  usrp_rf_settings.cpp  usrp_rf_settings.hpp
sdr/amd/: CMakeLists.txt  main.cpp  main.hpp
sdr/ettus/: CMakeLists.txt  hisnr_usrp.hpp  main.cpp  main.hpp  rf_settings.hpp
sdr/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_chirp[1]_include.cmake  test_hisnr_usrp[1]_include.cmake  test_pseudorandom_phase[1]_include.cmake  test_sdr[1]_include.cmake  test_utils[1]_include.cmake
static/cloud-init/: user-data
tests/: CMakeLists.txt  unit_testing_instructions.md
tests/preprocessing/: test_generate_chirp.py
tests/sdr/: test_chirp.cpp  test_hisnr_rfsoc42.cpp  test_hisnr_usrp.cpp  test_pseudorandom_phase.cpp  test_sdr.cpp  test_utils.cpp
tips/: detailed_installation.md
